--- a/index.html
+++ b/index.html
@@ -836,7 +836,13 @@
     <!-- Champs -->
     <div style="display:flex;flex-direction:column;gap:10px;">
       <input id="souvenirInputTitle" type="text" placeholder="Nom du souvenir..." maxlength="60" style="width:100%;padding:12px 14px;font-size:15px;font-family:'DM Sans',sans-serif;background:var(--s2);border:1px solid var(--border);border-radius:10px;color:var(--text);outline:none;box-sizing:border-box;">
-      <input id="souvenirInputDate" type="date" style="width:100%;padding:12px 14px;font-size:15px;font-family:'DM Sans',sans-serif;background:var(--s2);border:1px solid var(--border);border-radius:10px;color:var(--text);outline:none;box-sizing:border-box;">
+      <div style="position:relative;width:100%;box-sizing:border-box;">
+        <div style="display:flex;align-items:center;gap:10px;width:100%;padding:12px 14px;background:var(--s2);border:1px solid var(--border);border-radius:10px;box-sizing:border-box;pointer-events:none;">
+          <span style="font-size:16px;">📅</span>
+          <span id="souvenirDateLabel" style="font-size:15px;font-family:'DM Sans',sans-serif;color:var(--muted);">Date du souvenir...</span>
+        </div>
+        <input id="souvenirInputDate" type="date" onchange="var l=document.getElementById('souvenirDateLabel');if(this.value){l.style.color='var(--text)';l.textContent=new Date(this.value+'T12:00:00').toLocaleDateString('fr-FR',{day:'numeric',month:'long',year:'numeric'});}else{l.style.color='var(--muted)';l.textContent='Date du souvenir...';}" style="position:absolute;inset:0;width:100%;height:100%;opacity:0;cursor:pointer;box-sizing:border-box;">
+      </div>
       <input id="souvenirInputLieu" type="text" placeholder="📍 Lieu (optionnel)" maxlength="80" style="width:100%;padding:12px 14px;font-size:15px;font-family:'DM Sans',sans-serif;background:var(--s2);border:1px solid var(--border);border-radius:10px;color:var(--text);outline:none;box-sizing:border-box;">
       <textarea id="souvenirInputDesc" placeholder="Description, anecdote..." maxlength="300" rows="3" style="width:100%;padding:12px 14px;font-size:14px;font-family:'DM Sans',sans-serif;background:var(--s2);border:1px solid var(--border);border-radius:10px;color:var(--text);outline:none;box-sizing:border-box;resize:none;"></textarea>
       <button id="souvenirSaveBtn" onclick="souvenirSave()" style="width:100%;padding:13px;background:linear-gradient(135deg,#e879a0,#9b59b6);color:#fff;font-weight:700;font-size:15px;font-family:'DM Sans',sans-serif;border:none;border-radius:12px;cursor:pointer;">Sauvegarder 💾</button>
