--- a/index.html
+++ b/index.html
@@ -876,7 +876,37 @@
   </div>
 </div>
 
-<!-- Overlay Gestion Souvenirs -->
+<!-- Pop intermédiaire : Gestion des souvenirs -->
+<div id="souvenirGestionSheet" class="nous-modal-overlay">
+  <div class="nous-modal-sheet">
+    <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:20px;">
+      <div style="font-size:17px;font-weight:700;color:var(--text);">Gérer les souvenirs</div>
+      <span onclick="closeSouvenirGestionSheet()" style="font-size:20px;color:var(--muted);cursor:pointer;padding:4px 8px;">✕</span>
+    </div>
+    <!-- Option 1 : voir tous -->
+    <button onclick="closeSouvenirGestionSheet();_nousOpenGestionFull();" style="width:100%;display:flex;align-items:center;gap:14px;padding:14px;background:var(--s2);border:1px solid var(--border);border-radius:12px;cursor:pointer;margin-bottom:10px;text-align:left;">
+      <div style="width:36px;height:36px;background:rgba(232,121,160,0.12);border-radius:10px;display:flex;align-items:center;justify-content:center;flex-shrink:0;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#e879a0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/></svg>
+      </div>
+      <div>
+        <div style="font-size:14px;font-weight:700;color:var(--text);">Voir tous les souvenirs</div>
+        <div style="font-size:12px;color:var(--muted);margin-top:2px;">Parcourir, modifier, supprimer</div>
+      </div>
+    </button>
+    <!-- Option 2 : gérer favoris -->
+    <button onclick="closeSouvenirGestionSheet();_nousOpenGestionFull();" style="width:100%;display:flex;align-items:center;gap:14px;padding:14px;background:var(--s2);border:1px solid var(--border);border-radius:12px;cursor:pointer;text-align:left;">
+      <div style="width:36px;height:36px;background:rgba(232,121,160,0.12);border-radius:10px;display:flex;align-items:center;justify-content:center;flex-shrink:0;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="#e879a0" stroke="#e879a0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg>
+      </div>
+      <div>
+        <div style="font-size:14px;font-weight:700;color:var(--text);">Gérer les favoris</div>
+        <div style="font-size:12px;color:var(--muted);margin-top:2px;">Choisir les 5 souvenirs mis en avant</div>
+      </div>
+    </button>
+  </div>
+</div>
+
+<!-- Overlay liste complète des souvenirs -->
 <div id="souvenirGestionOverlay" class="souvenir-gestion-overlay">
   <div class="souvenir-gestion-header">
     <div style="font-size:17px;font-weight:700;color:var(--text);">Tous les souvenirs</div>
@@ -2731,7 +2761,7 @@ window.addEventListener('load', function(){
 // Les fonctions closeSouvenirModal / closeActiviteModal sont définies dans app-nous.js
 // On s'assure juste que le clic dehors ferme aussi la modale
 document.addEventListener('DOMContentLoaded', function(){
-  ['souvenirModal','activiteModal'].forEach(function(id){
+  ['souvenirModal','activiteModal','souvenirGestionSheet'].forEach(function(id){
     var m = document.getElementById(id);
     if (!m) return;
     m.addEventListener('click', function(e){
@@ -2831,11 +2861,13 @@ document.addEventListener('DOMContentLoaded', function(){
   display: flex;
 }
 .souvenir-gestion-header {
+  position: sticky;
+  top: 0;
+  z-index: 2;
   flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* Safe zone haut : topbar iPhone */
   padding-top: calc(var(--safe-top) + 16px);
   padding-bottom: 14px;
   padding-left: 16px;
